  area bounds.

- Docked window menu buttons should now look better on MacOS X.

}}}
{{{ Optimizations

- Fixed a performance regression from pre2. Opening large files with
  soft wrap off should now be as fast (or faster) than 4.1.

- Fixed delays when exiting editor if help viewer and/or plugin manager
  windows were open.

- jEdit.getBuffer() now uses a hashtable instead of a linear scan.

}}}
{{{ Bug Fixes

- Fixed NullPointerException when loading plugins if opened buffers
  contained an invalid 'folding' property.

- Fixed NullPointerException when invoking Complete Word in an edit mode
  that did not define a keyword map.

- Selecting 'Close' from a cloned dockable's popup menu closed the wrong
  window.

- Plugin manager window did not have the same icon as all other jEdit
  windows.

- "What's new in jEdit 4.2" document was missing from the download due
  to a packaging error.

- "Highlight every n lines" color setting in Gutter option pane didn't
  work properly.

- Plugin manager hardcoded the table foreground color to black, this
  could make the table unreadable if the text area background was dark
  and "use jEdit text area colors in all text controls" was on.

- EOL_SPAN_REGEXP rules threw NullPointerExceptions.

- Plugins that failed to load were not marked as such, and showed up as
  "Loaded" in the plugin manager.

}}}

}}}

{{{ Version 4.2pre2

Thanks to Carmine Lucarelli, Matt Albrecht, Ollie Rutherfurd and
Sebastien Pierre for contributing to this release.

{{{ Editing

- "Complete Word" now inserts the longest common prefix if there is more
  than one possible completion (the popup is still displayed as well).

- Added Ignore Case (C+e C+i) and Regular Expressions (C+e C+x) commands
  to Search menu for changing search bar settings from the keyboard.

- Incremental Search Bar and HyperSearch Bar commands now always
  disregard the selection. Use Incremental Search for Word and