@@ -22,6 +22,8 @@
 
 package org.gjt.sp.jedit.syntax;
 
+import javax.swing.text.Segment;
+
 /**
  * A dummy token handler that discards tokens.
  *
@@ -41,13 +43,14 @@ public class DummyTokenHandler implements TokenHandler
 	//{{{ handleToken() method
 	/**
 	 * Called by the token marker when a syntax token has been parsed.
+	 * @param seg The segment containing the text
 	 * @param id The token type (one of the constants in the
 	 * {@link Token} class).
 	 * @param offset The start offset of the token
 	 * @param length The number of characters in the token
 	 * @param context The line context
-	 * @since jEdit 4.1pre1
+	 * @since jEdit 4.2pre3
 	 */
-	public void handleToken(byte id, int offset, int length,
-		TokenMarker.LineContext context) {}
+	public void handleToken(Segment seg, byte id, int offset, int length,
+		TokenMarker.LineContext context) {} //}}}
 }
